--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /out/
-/.idea/
-TestClass.java
-/lib/jgrapht-1.4.0/
+**/.idea/workspace.xml **/.idea/tasks.xml
 /FixCon_Kotlin_JGraphT.iml
+/.idea/dictionaries/
+/lib/
